@@ -86,7 +86,7 @@ timeout 20
 
 # Proceed automatically when notices are shown on screen  (1, true, or on)
 # instead of having to press a key to continue (0, false, or off).
-# When this token is set to true, RefindPlus will pause for three seconds and
+# When this token is activated, RefindPlus will pause for three seconds and
 # then proceed as if a key had been pressed.
 # Default is false
 #
@@ -94,7 +94,7 @@ timeout 20
 
 # Force enable TRIM on non-Apple SSDs (1, true, or on) or not (0, false, or off).
 # 'TRIM', which can improve SSD health, is not enabled by default on non-Apple SSDs
-# in Mac OS. When this token is set to true, RefindPlus will switch TRIM on in Mac OS
+# in Mac OS. When this token is activated, RefindPlus will switch TRIM on in Mac OS
 # for all SSDs including non-Apple SSDs. This is only applied when booting Mac OS and
 # does not switch TRIM off when set to 'false' and TRIM has already been set.
 # Default is false
@@ -103,22 +103,31 @@ timeout 20
 
 # Disable Mac OS compatibility check when booting (1, true, or on) or not (0, false, or off).
 # Macs check whether the current Mac OS version is supported on the machine when booting and halts
-# if not. When this token is set to true, RefindPlus will set the "-no_compat_check" boot argument
+# if not. When this token is activated, RefindPlus will set the "-no_compat_check" boot argument
 # which disables this check and allows boot to proceed on otherwise unsupported Macs. This setting
-# is only applied when booting Mac OS and does not remove the "-no_compat_check" boot argument
-# when set to 'false' and the boot argument is already present.
+# is only applied when booting Mac OS and does not remove the boot argument when the token is set
+# to 'false' and the boot argument is already present.
 # Default is false
 #
 #disable_compat_check true
 
-# Disable Apple Mobile File Integrity (AMFI) checks in Mac OS (1, true, or on) or not (0, false, or off).
-# When this token is set to true, RefindPlus will set the "amfi_get_out_of_my_way=1" boot argument
+# Disable Apple Mobile File Integrity (AMFI) checks (1, true, or on) or not (0, false, or off).
+# When this token is activated, RefindPlus will set the "amfi_get_out_of_my_way=1" boot argument
 # which along with SIP, restircts the availability of entitlements to applications. This setting
-# is only applied when booting Mac OS and does not change the "amfi_get_out_of_my_way=1" boot argument
-# when set to 'false' and the boot argument is already present.
+# is only applied when booting Mac OS and does not remove the boot argument when the token is set
+# to 'false' and the boot argument is already present.
 # Default is false
 #
 #disable_amfi true
+
+# Prevent UEFI Windows from writing to Apple NVRAM (1, true, or on) or not (0, false, or off).
+# When this token is activated, RefindPlus will attempt to prevent UEFI Windows from creating
+# certificates in the BootROM on Apple Frimware as this can lead to firmware damage resulting
+# in an inability to boot Apple Macs. Legacy Windows does not have this issue and is safer
+# when running Windows directly from RefindPlus on Apple Firmware.
+# Default is false
+#
+#protect_mac_nvram true
 
 # RefindPlus will automatically enlarge icons and text when HiDPI screens are detected.
 # The detection is basic and based on detecting a minimum 1601px vertical resolution.
