@@ -227,9 +227,10 @@
 #define SUBSCREEN_HINT2            L"'Insert' or 'F2' to edit options; 'Esc' to return to main menu"
 #define SUBSCREEN_HINT2_NO_EDITOR  L"'Esc' to return to main menu"
 
-#define NULL_GUID_VALUE { 0x00000000, 0x0000, 0x0000, {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00} };
-#define REFIND_GUID_VALUE { 0x36D08FA7, 0xCF0B, 0x42F5, {0x8F, 0x14, 0x68, 0xDF, 0x73, 0xED, 0x37, 0x40} };
-#define ESP_GUID_VALUE { 0xc12a7328, 0xf81f, 0x11d2, { 0xba, 0x4b, 0x00, 0xa0, 0xc9, 0x3e, 0xc9, 0x3b } };
+#define NULL_GUID_VALUE   { 0x00000000, 0x0000, 0x0000, { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 } };
+#define REFIND_GUID_VALUE { 0x36D08FA7, 0xCF0B, 0x42F5, { 0x8F, 0x14, 0x68, 0xDF, 0x73, 0xED, 0x37, 0x40 } };
+#define ESP_GUID_VALUE    { 0xc12a7328, 0xf81f, 0x11d2, { 0xba, 0x4b, 0x00, 0xa0, 0xc9, 0x3e, 0xc9, 0x3b } };
+#define MICROSOFT_GUID    { 0x77FA9ABD, 0x0359, 0x4D32, { 0xBD, 0x60, 0x28, 0xF4, 0xE7, 0x8F, 0x78, 0x4B } };
 
 // Configuration file variables
 #define KERNEL_VERSION L"%v"
@@ -356,6 +357,7 @@ typedef struct {
    BOOLEAN          ForceTrim;
    BOOLEAN          DisableCompatCheck;
    BOOLEAN          DisableAMFI;
+   BOOLEAN          ProtectMacNVRAM;
    BOOLEAN          ShutdownAfterTimeout;
    BOOLEAN          Install;
    UINTN            RequestedScreenWidth;
