@@ -7,6 +7,9 @@
   * Enables the Stage 1 Loading Screen on some Classic Macs
 - Fixes ESP detection for saving screenshots
   * ESP detection may have sometimes returned 'true' on other locations
+- Implements "ProtectMacNVRAM" config option
+  * Prevents UEFI Windows from saving certificates to the NVRAM on Macs
+  * These certificates damage Apple NVRAM and result in an inability to start Macs up
 - Implements "DisableAMFI" config option
   * Disables the Apple Mobile File Integrity (AMFI) checks in Mac OS
   * Disabling AMFI may further facilitate booting new Mac OS Versions on unsupported Macs
